# task-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  README.md
backend/.sqlx/: query-07f95b419558b7e90e5c716c898bfa96c9fd7b06890c549edb5bcd2300cb05b8.json  query-0bc91bd8190a0a8643babdfecefc38202ee3b4e1b767e04cd553d9280ebd45e2.json  query-101843892cd65daa2547753935d0f0647d5b5af7c82607e25b0ed8c5c4b440f3.json  query-16b3f12d027d6cd90043449e08ac3b520c55d64a00d3bc9be95dd6e4e14fa3e5.json  query-18c866890fd5f675bd56b249b58e9ebea427fda5b58620cbf9cb61cbd8f0e683.json  query-1d6eda56a1f192b4c279d15d30d10cffe275a8da9b7c9cbdd7896b6ad26123c9.json  query-20fb5e23124fc7830f31b0576a7fe961d99e17c182d1a9a3db9d7558d4339f36.json  query-26515d5faca1890f8d4b8500fc1db2e67c1c19a1ed666d341d25804b53c7f161.json  query-2ef37684401e77071d945ba36b0c29e6445e31314f40099b7a79fd6dcaaebdd2.json  query-2fba70ac64f9756656c4f8c4ba750771380815eddfded8177092a6d55d3ff568.json  query-3210517b63bb33e0e688f4ce0c998fdf85d05f875baf5e24c510c664aef7b8b3.json  query-34f170d4fc8754388437f733f68753f99d1232585eef687b0d5056054666e1b6.json  query-353e8292787c881174f59d0ac7dc25952e03ba149030c388da4f563ffe33f338.json  query-368b91813dcb399cb9bdbaec91fa04b7e22517e34716a63a4ce395ef25e8c5c0.json  query-36efd20e91d36b7404e8aba3058a67a4717bc870aac8b0e9c39f12382982d419.json  query-3dfaafe128865264cd9eb300617b3920197a0d6b57792e3f5578489bfd329f48.json  query-4378dd660240282c398b89b09825cd4c561721b9af07af55dcd0d486fb5a67e2.json  (+31 more)
backend/migrations/: 001_init.sql
backend/src/: auth.rs  db.rs  (+5 more)
(+7 files in other folders)
