[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid"
] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tower-http = { version = "0.5", features = ["fs"] }

# AUTH
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

